--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,11 @@
+html { height:100%; }
+
+
+
 #app {
     font-family: "Open Sans Condensed";
     color: #363636;
+    min-height: 100%;
 }
 
 #test {
@@ -13,5 +18,92 @@
 }
 
 .navbar-dark {
-    background-color: #363636;
+    background-color: #008ccf;
 }
+
+
+/*
+.col, .col-2, .col-10 {
+    padding: 0;
+}
+*/
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+    display: none;
+  }
+  
+  /* Optional: Style the caret down icon */
+  .fa-caret-down {
+    float: right;
+    padding-right: 8px;
+  }
+
+
+/* The side navigation menu */
+.sidebar {
+    margin-top: 3.5rem;
+    padding: 0;
+    width: 200px;
+    background-color: #666666;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+  }
+  
+  /* Sidebar links */
+  .sidebar a, .dropdown-btn {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  /* Active/current link */
+  .sidebar a.router-link-active {
+    background-color: #4caf50;
+    color: white;
+  }
+  
+  /* Links on mouse-over */
+  .sidebar a:hover:not(.active), .dropdown-btn:hover {
+    background-color: #555;
+    color: white;
+  }
+  
+  /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+  main {
+    margin-left: 200px;
+    padding-top: 3.5rem;
+  }
+
+  
+  /* On screens that are less than 700px wide, make the sidebar into a topbar */
+  @media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+    }
+    .sidebar a {
+      float: left;
+    }
+    main {
+      margin-left: 0;
+      margin-top: 0;
+    }
+  }
+  
+  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+  @media screen and (max-width: 400px) {
+    .sidebar a {
+      text-align: center;
+      float: none;
+    }
+  }
